nginx-svc-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-v1
  labels:
    app: nginx-v1
spec:
#  type: NodePort 
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
#    targetPort: 80
  selector:
    app: nginx-v1
