nginx-svc-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-v2
  labels:
    app: nginx-v2
spec:
#  type: LoadBalancer 
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
#    targetPort: 80
  selector:
    app: nginx-v2
