ingress-rule-root.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
 name: root-blog
 namespace: default 
spec: 
 virtualhost:
   fqdn: app.test.com
 routes: 
 - match: /
   services: 
   - name: nginx-svc
     port: 80
